Fixing pom and mv test bugs