@@ -7,25 +7,25 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>4.0.5</version>
-    <relativePath /> <!-- lookup parent from repository -->
+    <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.laderrco</groupId>
   <artifactId>fortunelink</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>fortunelink</name>
   <description>Manage your portfolio and future investments all in one location</description>
-  <url />
+  <url/>
   <licenses>
-    <license />
+    <license/>
   </licenses>
   <developers>
-    <developer />
+    <developer/>
   </developers>
   <scm>
-    <connection />
-    <developerConnection />
-    <tag />
-    <url />
+    <connection/>
+    <developerConnection/>
+    <tag/>
+    <url/>
   </scm>
   <properties>
     <java.version>25</java.version>
@@ -404,12 +404,9 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
-            @{argLine}
-            -javaagent:${settings.localRepository}/org/mockito/mockito-core/5.20.0/mockito-core-5.20.0.jar
-            --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+            -XX:+EnableDynamicAgentLoading
+            -Dnet.bytebuddy.experimental=true
             --add-opens java.base/java.lang=ALL-UNNAMED
-            --add-opens java.base/java.util=ALL-UNNAMED
-            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
